added zoom buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,22 +29,29 @@
 
 
 		<div id="controls">
-			<div id="panLeft" class="buttonDiv controlsButton pan" style="top:30vh; left:18vw">
+			<div id="Left" class="buttonDiv controlsButton pan" style="top:30vh; left:18vw">
 				<span class="material-icons-outlined controlsButtonText">arrow_back_ios</span>
 			</div>
 
-			<div id="panRight" class="buttonDiv controlsButton pan" style="top:30vh; left:62vw">
+			<div id="Right" class="buttonDiv controlsButton pan" style="top:30vh; left:62vw">
 				<span class="material-icons-outlined controlsButtonText">arrow_forward_ios</span>
 			</div>			
 
-			<div id="panUp" class="buttonDiv controlsButton pan" style="top:8vh; left:40vw">
+			<div id="Up" class="buttonDiv controlsButton pan" style="top:8vh; left:40vw">
 				<span class="material-icons-outlined controlsButtonText" style="transform: rotate(90deg)">arrow_back_ios</span>
 			</div>	
 
-			<div id="panDown" class="buttonDiv controlsButton pan" style="top:52vh; left:40vw;">
+			<div id="Down" class="buttonDiv controlsButton pan" style="top:52vh; left:40vw;">
 				<span class="material-icons-outlined controlsButtonText" style="transform: rotate(-90deg)">arrow_back_ios</span>
 			</div>	
 
+			<div id="ZoomIn" class="buttonDiv controlsButton zoom" style="top:8vh; left:2vw; width:20vh">
+				<span class="controlsButtonText">+</span>
+			</div>	
+
+			<div id="ZoomOut" class="buttonDiv controlsButton zoom" style="top:52vh; left:2vw; width:20vh">
+				<span class="controlsButtonText">-</span>
+			</div>	
 
 
 			<div id="nextImage" class="buttonDiv imgButton img" style="top:87vh; left:52vw">
